Don't record end mark of traces for loading resource too early

Before this CL, we called ResourceLoadContinuesBeyondScope()
only after StartLoad() succeeded. This wasn't enough to cover
all loading cases and ResourceLoader::DidFinishLoading()
could be called when we already record END marks for tracing.

This CL changes to call ResourceLoadContinuesBeyondScope()
when resource still needs loading or is loading.

Bug: 900815
Change-Id: I478e1e36c41b0fdc50f43c7d99687ea615eaaf2a
Reviewed-on: https://chromium-review.googlesource.com/c/1312174
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Commit-Queue: Kenichi Ishibashi <bashi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604543}
Former-commit-id: 1a9b490fcde2aaeab4956c59ea4de84c826f151b